--- a/containmentfacilities.html
+++ b/containmentfacilities.html
@@ -62,6 +62,9 @@
         li {
             padding: 5px 0;
         }
+        .examples {
+            margin-left: 20px;
+        }
     </style>
 </head>
 <body>
@@ -82,69 +85,69 @@
         <h2>Level Alpha - Benign</h2>
         <ul>
             <li><strong>Alpha-1:</strong> Non-threatening, easily contained, or beneficial.</li>
-            <li><strong>Examples:</strong> Docile plants with unique properties (e.g., glow-in-the-dark flowers used for illumination).</li>
+            <li class="examples"><strong>Examples:</strong> Docile plants with unique properties (e.g., glow-in-the-dark flowers used for illumination).</li>
             <li><strong>Alpha-2:</strong> Slightly unpredictable but generally harmless.</li>
-            <li><strong>Examples:</strong> Communicating plants that respond to human emotions by changing colors.</li>
+            <li class="examples"><strong>Examples:</strong> Communicating plants that respond to human emotions by changing colors.</li>
         </ul>
 
         <h2>Level Beta - Moderate Risk</h2>
         <ul>
             <li><strong>Beta-1:</strong> Require specific containment measures, moderate risk.</li>
-            <li><strong>Examples:</strong> Telepathic animals capable of basic mind reading.</li>
+            <li class="examples"><strong>Examples:</strong> Telepathic animals capable of basic mind reading.</li>
             <li><strong>Beta-2:</strong> Unpredictable or partially understood; potential danger if improperly contained.</li>
-            <li><strong>Examples:</strong> Shape-shifting materials that can alter their form based on environmental stimuli.</li>
+            <li class="examples"><strong>Examples:</strong> Shape-shifting materials that can alter their form based on environmental stimuli.</li>
             <li><strong>Beta-3:</strong> Intentional or malevolent behavior; robust containment needed.</li>
-            <li><strong>Examples:</strong> Sentient AI with the potential to override control systems.</li>
+            <li class="examples"><strong>Examples:</strong> Sentient AI with the potential to override control systems.</li>
         </ul>
 
         <h2>Level Gamma - High Risk</h2>
         <ul>
             <li><strong>Gamma-1:</strong> Highly dangerous but containable with advanced measures.</li>
-            <li><strong>Examples:</strong> Controlled black holes used for research but needing constant monitoring.</li>
+            <li class="examples"><strong>Examples:</strong> Controlled black holes used for research but needing constant monitoring.</li>
             <li><strong>Gamma-2:</strong> Exert control or influence over objects, space, or personnel.</li>
-            <li><strong>Examples:</strong> Mind-controlling parasites capable of influencing host behavior.</li>
+            <li class="examples"><strong>Examples:</strong> Mind-controlling parasites capable of influencing host behavior.</li>
             <li><strong>Gamma-3:</strong> Potential widespread damage or catastrophe if containment fails.</li>
-            <li><strong>Examples:</strong> Uncontrollable weather machines that can create severe weather patterns.</li>
+            <li class="examples"><strong>Examples:</strong> Uncontrollable weather machines that can create severe weather patterns.</li>
         </ul>
 
         <h2>Level Delta - Extreme Danger</h2>
         <ul>
             <li><strong>Delta-1:</strong> Imminent threat to ARI, local populations, or global stability.</li>
-            <li><strong>Examples:</strong> Time manipulation devices that can alter historical events.</li>
+            <li class="examples"><strong>Examples:</strong> Time manipulation devices that can alter historical events.</li>
             <li><strong>Delta-2:</strong> Nearly impossible to contain due to immense power or chaotic behavior.</li>
-            <li><strong>Examples:</strong> Interdimensional portals that can randomly open and close, risking cross-dimensional invasions.</li>
+            <li class="examples"><strong>Examples:</strong> Interdimensional portals that can randomly open and close, risking cross-dimensional invasions.</li>
             <li><strong>Delta-3:</strong> Potential bioweapon or mass-destruction capabilities; top-priority containment.</li>
-            <li><strong>Examples:</strong> Bio-engineered viruses designed for rapid and lethal outbreaks.</li>
+            <li class="examples"><strong>Examples:</strong> Bio-engineered viruses designed for rapid and lethal outbreaks.</li>
         </ul>
 
         <h2>Level Epsilon - Special Cases</h2>
         <ul>
             <li><strong>Epsilon-1:</strong> Require unconventional or experimental containment methods.</li>
-            <li><strong>Examples:</strong> Living paintings that can trap people within their scenes.</li>
+            <li class="examples"><strong>Examples:</strong> Living paintings that can trap people within their scenes.</li>
             <li><strong>Epsilon-2:</strong> Symbiotic or intertwined with key personnel, technology, or other Aberrations.</li>
-            <li><strong>Examples:</strong> Soul-bonded artifacts that require a human host to function.</li>
+            <li class="examples"><strong>Examples:</strong> Soul-bonded artifacts that require a human host to function.</li>
             <li><strong>Epsilon-3:</strong> Involving alien technology or cosmic phenomena.</li>
-            <li><strong>Examples:</strong> Extraterrestrial devices with unknown functions and potentially catastrophic capabilities.</li>
+            <li class="examples"><strong>Examples:</strong> Extraterrestrial devices with unknown functions and potentially catastrophic capabilities.</li>
         </ul>
 
         <h2>Level Omega - Beyond Classification</h2>
         <ul>
             <li><strong>Omega-1:</strong> Transcend conventional understanding or containment capabilities.</li>
-            <li><strong>Examples:</strong> Entities embodying abstract concepts like fear or time.</li>
+            <li class="examples"><strong>Examples:</strong> Entities embodying abstract concepts like fear or time.</li>
             <li><strong>Omega-2:</strong> Intertwined with fundamental cosmic principles or dimensions.</li>
-            <li><strong>Examples:</strong> Beings from higher-dimensional spaces that can alter physical laws.</li>
+            <li class="examples"><strong>Examples:</strong> Beings from higher-dimensional spaces that can alter physical laws.</li>
             <li><strong>Omega-3:</strong> Connected to the origin or fundamental fabric of the universe; restricted info.</li>
-            <li><strong>Examples:</strong> Entities affecting reality itself, potentially rewriting existence.</li>
+            <li class="examples"><strong>Examples:</strong> Entities affecting reality itself, potentially rewriting existence.</li>
         </ul>
 
         <h2>Level Zeta - Uncontained</h2>
         <ul>
             <li><strong>Zeta-1:</strong> Known and monitored but currently uncontainable due to resource or technological limitations.</li>
-            <li><strong>Examples:</strong> Wandering spectral entities that appear sporadically and unpredictably.</li>
+            <li class="examples"><strong>Examples:</strong> Wandering spectral entities that appear sporadically and unpredictably.</li>
             <li><strong>Zeta-2:</strong> Actively evading containment efforts, posing significant threat.</li>
-            <li><strong>Examples:</strong> Rogue telekinetic individuals who have escaped containment.</li>
+            <li class="examples"><strong>Examples:</strong> Rogue telekinetic individuals who have escaped containment.</li>
             <li><strong>Zeta-3:</strong> Unknown whereabouts; high priority for retrieval and containment.</li>
-            <li><strong>Examples:</strong> A sentient nanobot swarm that escaped during a research project.</li>
+            <li class="examples"><strong>Examples:</strong> A sentient nanobot swarm that escaped during a research project.</li>
         </ul>
     </div>
 </body>
