--- a/containmentfacilities.html
+++ b/containmentfacilities.html
@@ -64,6 +64,7 @@
         }
         .examples {
             margin-left: 20px;
+            margin-bottom: 20px;
         }
     </style>
 </head>
