--- a/Aberrations/ABR-003/ABR003.html
+++ b/Aberrations/ABR-003/ABR003.html
@@ -14,7 +14,7 @@
             color: #D3D3D3;
         }
         .navbar {
-            background-color: #4B4B4B;
+            background-color: #1a1a1a;
             overflow: hidden;
         }
         .navbar a {
@@ -23,61 +23,98 @@
             color: #f2f2f2;
             text-align: center;
             padding: 14px 20px;
-            text-decoration: none;
+            text-decoration: none.
         }
         .navbar a:hover {
             background-color: #464646;
-            color: black;
+            color: black.
         }
         .container {
-            padding: 20px;
-            margin: 20px auto;
-            max-width: 800px;
-            background-color: #4B4B4B;
-            border-radius: 8px;
-            box-shadow: 0 0 15px rgba(0,0,0,0.2);
+            padding: 20px.
+            margin: 20px auto.
+            max-width: 800px.
+            background-color: #4B4B4B.
+            border-radius: 8px.
+            box-shadow: 0 0 15px rgba(0,0,0,0.2).
+        }
+        .header-section {
+            display: flex.
+            justify-content: space-between.
+            align-items: flex-start.
+        }
+        .header-section div {
+            flex: 1.
+        }
+        .image-container {
+            max-width: 250px.
+            margin-left: 20px.
+            border-radius: 8px.
+            box-shadow: 0 0 15px rgba(0,0,0,0.2).
+            background-color: #3D3D3D.
+            padding: 10px.
+            text-align: center.
+        }
+        .image-container img {
+            max-width: 100%.
+            border-radius: 8px.
+        }
+        .image-container p {
+            margin: 10px 0 0 0.
+            font-size: 14px.
+            color: #D3D3D3.
         }
         h1 {
-            font-size: 22px;
-            border-bottom: 1px solid #666;
-            padding-bottom: 2px;
+            font-size: 22px.
+            border-bottom: 1px solid #666.
+            padding-bottom: 2px.
         }
         h2 {
-            font-size: 18px;
-            color: #D3D3D3;
-            margin-top: 40px;
-            margin-bottom: -10px;
-            border-bottom: 1px solid #666;
-            padding-bottom: 2px;
+            font-size: 18px.
+            color: #D3D3D3.
+            margin-top: 40px.
+            margin-bottom: -10px.
+            border-bottom: 1px solid #666.
+            padding-bottom: 2px.
         }
         p, ul {
-            font-size: 16px;
-            line-height: 1.6;
-            color: #D3D3D3;
+            font-size: 16px.
+            line-height: 1.6.
+            color: #D3D3D3.
         }
         ul {
-            list-style-type: none;
-            padding-left: 0;
+            list-style-type: none.
+            padding-left: 0.
         }
         li {
-            padding: 5px 0;
+            padding: 5px 0.
         }
     </style>
 </head>
 <body>
     <div class="navbar">
-        <a href="homepage.html">Home</a>
-        <a href="ABRlist.html">Aberrations Index</a>
-        <a href="about.html">About</a>
-        <a href="research.html">Research</a>
-        <a href="contact.html">Contact</a>
+        <a href="https://hazudo.github.io/ARI/homepage.html">Home</a>
+        <a href="https://hazudo.github.io/ARI/ABRlist.html">Aberration Index</a>
+        <a href="https://hazudo.github.io/ARI/clearanceranklist.html">Clearance Rank List</a>
+        <a href="https://hazudo.github.io/ARI/containmentfacilities.html">Containment Facilities</a>
+        <a href="https://hazudo.github.io/ARI/stafftitles.html">Staff Titles</a>
+        <a href="https://hazudo.github.io/ARI/about.html">About</a>
+        <a href="https://hazudo.github.io/ARI/research.html">Research</a>
+        <a href="https://hazudo.github.io/ARI/contact.html">Contact</a>
     </div>
 
     <div class="container">
         <h1>ABERRATION DOCUMENT: ABR-003</h1>
-        <p><strong>Aberration Designation:</strong> ABR-003 "The Unseen Stalker"</p>
-        <p><strong>Threat Level:</strong> Class IV: Critical</p>
-        <p><strong>Containment Level:</strong> Delta-2</p>
+        <div class="header-section">
+            <div>
+                <p><strong>Aberration Designation:</strong> ABR-003 "The Unseen Stalker"</p>
+                <p><strong>Threat Level:</strong> Class IV: Critical</p>
+                <p><strong>Containment Level:</strong> Delta-2</p>
+            </div>
+            <div class="image-container">
+                <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-003/Image%20of%20ABR-003.jpg" alt="Image of ABR-003">
+                <p>ABR-003 in containment cell</p>
+            </div>
+        </div>
 
         <h2>Description</h2>
         <p>ABR-003, designated as "The Unseen Stalker," is an imperceptible entity that initiates pursuit of an individual, referred to as the target, under conditions yet to be fully understood. The entity predominantly commences tracking during nocturnal hours, though deviations are occasionally noted.</p>
@@ -101,9 +138,9 @@
         <p><strong>Background:</strong> ABR-003 came to the attention of ARI following an investigation into a series of unexplained disappearances in ███████, Sweden. Survivors reported encounters with an enigmatic entity persistently trailing them and attempting unauthorized entry into their quarters. ARI agents, upon investigating these incidents, identified consistent behavioral patterns associated with ABR-003, leading to the implementation of containment protocols.</p>
         <p><strong>Incident Reports:</strong>
             <ul>
-                <li><strong>Incident 003-01:</strong> Initial discovery in ███████, Sweden. Multiple disappearances with survivors reporting eerie sensations and persuasive knocking.</li>
-                <li><strong>Incident 003-02:</strong> Confirmation of ABR-003's mimicking behavior through audio recordings from a survivor's device.</li>
-                <li><strong>Incident 003-03:</strong> Successful relocation of a target to an ARI facility, with subsequent cessation of ABR-003's pursuit.</li>
+                <li><strong>Incident 003-01:</strong> On ██/██/████, ARI personnel responding to reports of unexplained disappearances in ███████, Sweden, encountered ABR-003. The team observed the entity's behavior and recorded its attempts to mimic a familiar voice to gain entry.</li>
+                <li><strong>Incident 003-02:</strong> During the night of ██/██/████, a high-priority target reported persistent sensations of being followed and hearing knocks on their door. Audio equipment confirmed the presence of ABR-003 and recorded the entity's mimicking behavior.</li>
+                <li><strong>Incident 003-03:</strong> On ██/██/████, a target under surveillance was successfully relocated to an ARI secure facility. The entity's pursuit ceased upon relocation, validating the effectiveness of ARI's containment measures.</li>
             </ul>
         </p>
         <p><strong>Research:</strong> Ongoing studies aim to understand ABR-003's criteria for target selection. Current data suggests no discernible pattern, as victims vary widely in age, ethnicity, socioeconomic status, and health. Efforts are directed toward developing more effective countermeasures and understanding the entity's origin and capabilities.</p>
