--- a/Aberrations/ABR-003/ABR003.html
+++ b/Aberrations/ABR-003/ABR003.html
@@ -23,70 +23,70 @@
             color: #f2f2f2;
             text-align: center;
             padding: 14px 20px;
-            text-decoration: none.
+            text-decoration: none;
         }
         .navbar a:hover {
             background-color: #464646;
-            color: black.
+            color: black;
         }
         .container {
-            padding: 20px.
-            margin: 20px auto.
-            max-width: 800px.
-            background-color: #4B4B4B.
-            border-radius: 8px.
-            box-shadow: 0 0 15px rgba(0,0,0,0.2).
+            padding: 20px;
+            margin: 20px auto;
+            max-width: 800px;
+            background-color: #4B4B4B;
+            border-radius: 8px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.2);
         }
         .header-section {
-            display: flex.
-            justify-content: space-between.
-            align-items: flex-start.
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
         }
         .header-section div {
-            flex: 1.
+            flex: 1;
         }
         .image-container {
-            max-width: 250px.
-            margin-left: 20px.
-            border-radius: 8px.
-            box-shadow: 0 0 15px rgba(0,0,0,0.2).
-            background-color: #3D3D3D.
-            padding: 10px.
-            text-align: center.
+            max-width: 250px;
+            margin-left: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.2);
+            background-color: #3D3D3D;
+            padding: 10px;
+            text-align: center;
         }
         .image-container img {
-            max-width: 100%.
-            border-radius: 8px.
+            max-width: 100%;
+            border-radius: 8px;
         }
         .image-container p {
-            margin: 10px 0 0 0.
-            font-size: 14px.
-            color: #D3D3D3.
+            margin: 10px 0 0 0;
+            font-size: 14px;
+            color: #D3D3D3;
         }
         h1 {
-            font-size: 22px.
-            border-bottom: 1px solid #666.
-            padding-bottom: 2px.
+            font-size: 22px;
+            border-bottom: 1px solid #666;
+            padding-bottom: 2px;
         }
         h2 {
-            font-size: 18px.
-            color: #D3D3D3.
-            margin-top: 40px.
-            margin-bottom: -10px.
-            border-bottom: 1px solid #666.
-            padding-bottom: 2px.
+            font-size: 18px;
+            color: #D3D3D3;
+            margin-top: 40px;
+            margin-bottom: -10px;
+            border-bottom: 1px solid #666;
+            padding-bottom: 2px;
         }
         p, ul {
-            font-size: 16px.
-            line-height: 1.6.
-            color: #D3D3D3.
+            font-size: 16px;
+            line-height: 1.6;
+            color: #D3D3D3;
         }
         ul {
-            list-style-type: none.
-            padding-left: 0.
+            list-style-type: none;
+            padding-left: 0;
         }
         li {
-            padding: 5px 0.
+            padding: 5px 0;
         }
     </style>
 </head>
@@ -138,9 +138,9 @@
         <p><strong>Background:</strong> ABR-003 came to the attention of ARI following an investigation into a series of unexplained disappearances in ███████, Sweden. Survivors reported encounters with an enigmatic entity persistently trailing them and attempting unauthorized entry into their quarters. ARI agents, upon investigating these incidents, identified consistent behavioral patterns associated with ABR-003, leading to the implementation of containment protocols.</p>
         <p><strong>Incident Reports:</strong>
             <ul>
-                <li><strong>Incident 003-01:</strong> On ██/██/████, ARI personnel responding to reports of unexplained disappearances in ███████, Sweden, encountered ABR-003. The team observed the entity's behavior and recorded its attempts to mimic a familiar voice to gain entry.</li>
-                <li><strong>Incident 003-02:</strong> During the night of ██/██/████, a high-priority target reported persistent sensations of being followed and hearing knocks on their door. Audio equipment confirmed the presence of ABR-003 and recorded the entity's mimicking behavior.</li>
-                <li><strong>Incident 003-03:</strong> On ██/██/████, a target under surveillance was successfully relocated to an ARI secure facility. The entity's pursuit ceased upon relocation, validating the effectiveness of ARI's containment measures.</li>
+                <li><strong>Incident 003-01:</strong> During an ARI investigation in ███████, Sweden, multiple disappearances were linked to encounters with an unseen entity. Survivors consistently reported sensations of being followed and hearing persuasive knocking at night.</li>
+                <li><strong>Incident 003-02:</strong> Audio recordings captured during an ARI operation confirmed ABR-003's mimicking behavior, providing valuable data for developing countermeasures against its auditory influence.</li>
+                <li><strong>Incident 003-03:</strong> A targeted individual was successfully relocated to an ARI facility. ABR-003's pursuit ceased upon relocation, supporting the efficacy of secure ARI containment measures.</li>
             </ul>
         </p>
         <p><strong>Research:</strong> Ongoing studies aim to understand ABR-003's criteria for target selection. Current data suggests no discernible pattern, as victims vary widely in age, ethnicity, socioeconomic status, and health. Efforts are directed toward developing more effective countermeasures and understanding the entity's origin and capabilities.</p>
