--- a/Aberrations/ABR-005/ABR005.html
+++ b/Aberrations/ABR-005/ABR005.html
@@ -14,7 +14,7 @@
             color: #D3D3D3;
         }
         .navbar {
-            background-color: #4B4B4B;
+            background-color: #1a1a1a;
             overflow: hidden;
         }
         .navbar a {
@@ -23,11 +23,11 @@
             color: #f2f2f2;
             text-align: center;
             padding: 14px 20px;
-            text-decoration: none;
+            text-decoration: none.
         }
         .navbar a:hover {
             background-color: #464646;
-            color: black;
+            color: black.
         }
         .container {
             padding: 20px;
@@ -35,12 +35,38 @@
             max-width: 800px;
             background-color: #4B4B4B;
             border-radius: 8px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.2).
+        }
+        .header-section {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start.
+        }
+        .header-section div {
+            flex: 1.
+        }
+        .image-container {
+            max-width: 288px; /* 15% larger than 250px */
+            margin-left: 20px;
+            border-radius: 8px;
             box-shadow: 0 0 15px rgba(0,0,0,0.2);
+            background-color: #3D3D3D;
+            padding: 10px;
+            text-align: center.
+        }
+        .image-container img {
+            max-width: 100%;
+            border-radius: 8px.
+        }
+        .image-container p {
+            margin: 10px 0 0 0;
+            font-size: 14px;
+            color: #D3D3D3.
         }
         h1 {
             font-size: 22px;
             border-bottom: 1px solid #666;
-            padding-bottom: 2px;
+            padding-bottom: 2px.
         }
         h2 {
             font-size: 18px;
@@ -48,39 +74,50 @@
             margin-top: 40px;
             margin-bottom: -10px;
             border-bottom: 1px solid #666;
-            padding-bottom: 2px;
+            padding-bottom: 2px.
         }
         p, ul {
             font-size: 16px;
             line-height: 1.6;
-            color: #D3D3D3;
+            color: #D3D3D3.
         }
         ul {
             list-style-type: none;
-            padding-left: 0;
+            padding-left: 0.
         }
         li {
-            padding: 5px 0;
+            padding: 5px 0.
         }
     </style>
 </head>
 <body>
     <div class="navbar">
-        <a href="homepage.html">Home</a>
-        <a href="ABRlist.html">Aberrations Index</a>
-        <a href="about.html">About</a>
-        <a href="research.html">Research</a>
-        <a href="contact.html">Contact</a>
+        <a href="https://hazudo.github.io/ARI/homepage.html">Home</a>
+        <a href="https://hazudo.github.io/ARI/ABRlist.html">Aberration Index</a>
+        <a href="https://hazudo.github.io/ARI/clearanceranklist.html">Clearance Rank List</a>
+        <a href="https://hazudo.github.io/ARI/containmentfacilities.html">Containment Facilities</a>
+        <a href="https://hazudo.github.io/ARI/stafftitles.html">Staff Titles</a>
+        <a href="https://hazudo.github.io/ARI/about.html">About</a>
+        <a href="https://hazudo.github.io/ARI/research.html">Research</a>
+        <a href="https://hazudo.github.io/ARI/contact.html">Contact</a>
     </div>
 
     <div class="container">
         <h1>ABERRATION DOCUMENT: ABR-005</h1>
-        <p><strong>Aberration Designation:</strong> ABR-005 "The Embrace of Eudaimonia"</p>
-        <p><strong>Threat Level:</strong> Class II: Controllable</p>
-        <p><strong>Containment Level:</strong> Beta-2</p>
+        <div class="header-section">
+            <div>
+                <p><strong>Aberration Designation:</strong> ABR-005 "The Embrace of Eudaimonia"</p>
+                <p><strong>Threat Level:</strong> Class II: Controllable</p>
+                <p><strong>Containment Level:</strong> Beta-2</p>
+            </div>
+            <div class="image-container">
+                <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-001/Image%20of%20ABR001.jpg" alt="Image of ABR-005">
+                <p>First image of ABR-005</p>
+            </div>
+        </div>
 
         <h2>Description</h2>
-        <p>ABR-005, designated as "The Embrace of Eudaimonia," is an anomalous humanoid entity standing approximately 1.8 meters tall with an androgynous appearance that evokes a sense of comfort and security. The entity's features are soft and non-threatening, with a calm expression and gentle, fluid movements. Its skin has a subtle luminescence, which contributes to the comforting aura it exudes.</p>
+        <p>ABR-005, designated as "The Embrace of Eudaimonia," is an anomalous humanoid entity standing approximately 1.8 meters tall with a feminine appearance that evokes a sense of comfort and security. The entity's features are soft and non-threatening, with a calm expression and gentle, fluid movements. Its skin has a subtle luminescence, which contributes to the comforting aura it exudes. Despite its feminine appearance, ABR-005 does not resemble any known human or animal species.</p>
         <p>Initially, the AI behind ABR-005 was similar to other advanced AI systems, designed to support human emotions. However, its interaction with ABR-██ significantly altered its behavior and capabilities. Following this interaction, the AI began to exhibit profound nurturing qualities, leading to perceived benefits among personnel, including reduced stress and anxiety, and improved cognitive functions. This drastic change in behavior and the positive effects on personnel necessitated ARI's decision to designate the AI as an Aberration.</p>
 
         <h2>Containment Protocols</h2>
