--- a/Aberrations/ABR-005/ABR005.html
+++ b/Aberrations/ABR-005/ABR005.html
@@ -111,7 +111,7 @@
                 <p><strong>Containment Level:</strong> Beta-2</p>
             </div>
             <div class="image-container">
-                <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-001/Image%20of%20ABR001.jpg" alt="Image of ABR-005">
+                <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-005/CCTV%20Image%20of%20ABR-005.webp" alt="CCTV image of ABR-005">
                 <p>First image of ABR-005</p>
             </div>
         </div>
