--- a/Aberrations/ABR-005/ABR005.html
+++ b/Aberrations/ABR-005/ABR005.html
@@ -112,7 +112,7 @@
             </div>
             <div class="image-container">
                 <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-005/CCTV%20Image%20of%20ABR-005.webp" alt="CCTV image of ABR-005">
-                <p>First image of ABR-005</p>
+                <p>CCTV image of ABR-005</p>
             </div>
         </div>
 
