--- a/Aberrations/ABR-003/ABR003.html
+++ b/Aberrations/ABR-003/ABR003.html
@@ -112,7 +112,7 @@
             </div>
             <div class="image-container">
                 <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-003/Image%20of%20ABR-003.jpg" alt="Image of ABR-003">
-                <p>ABR-003 in containment cell</p>
+                <p>Image of ABR-003</p>
             </div>
         </div>
 
