--- a/clearanceranklist.html
+++ b/clearanceranklist.html
@@ -67,32 +67,34 @@
         <a href="https://hazudo.github.io/ARI/about.html">About</a>
         <a href="https://hazudo.github.io/ARI/research.html">Research</a>
         <a href="https://hazudo.github.io/ARI/contact.html">Contact</a>
-
     </div>
 
     <div class="container">
         <h1>Security Clearance Rank List</h1>
 
         <h2>Clearance Level 6 (C6 - Censored and Unknown)</h2>
-        <p><strong>Description:</strong> The highest security level, known only to select high-ranking officials. Information at this level is strictly compartmentalized to protect the most sensitive and classified data. Access to this level includes highly confidential projects and sensitive operations, ensuring that only the most trusted and senior officials are involved in the decision-making process.</p>
+        <p><strong>Description:</strong> Highest security level, known to select high-ranking officials. Strictly compartmentalized.</p>
 
         <h2>Clearance Level 5 (C5 - Executive Council)</h2>
-        <p><strong>Description:</strong> Executive Council members oversee critical decisions, classified information, and top-level initiatives. This level involves strategic planning and resource allocation for significant projects. Individuals with C5 clearance play a crucial role in formulating and implementing high-impact policies and maintaining inter-departmental coordination.</p>
+        <p><strong>Description:</strong> Executive Council members oversee critical decisions, classified information, and top-level initiatives.</p>
 
         <h2>Clearance Level 4 (C4 - Division Heads)</h2>
-        <p><strong>Description:</strong> Division Heads control departmental information, vital research data, and containment protocols. They are responsible for ensuring effective research and containment strategies within their departments. Access includes department-specific data and sensitive project information, allowing them to manage their teams and operations efficiently.</p>
+        <p><strong>Description:</strong> Division Heads control departmental information, vital research data, and containment protocols. Key decision-makers.</p>
 
         <h2>Clearance Level 3 (C3 - Lead Researchers and Containment Specialists)</h2>
-        <p><strong>Description:</strong> Assigned to lead researchers, containment specialists, and agents. This clearance level grants access to detailed operational information and sensitive data necessary for specialized roles. Individuals with C3 clearance conduct research, develop and implement containment strategies, and handle field operations, ensuring the safety and success of ARI’s missions.</p>
+        <p><strong>Description:</strong> Given to lead researchers, containment specialists, and agents. Access includes detailed operational information and sensitive data.</p>
 
         <h2>Clearance Level 2 (C2 - Support Personnel)</h2>
-        <p><strong>Description:</strong> Assigned to support staff including administration, analysts, security, and tech support. Access is restricted to the information necessary for their specific tasks. Support personnel provide essential services that facilitate the smooth operation of ARI, ensuring critical functions are maintained.</p>
+        <p><strong>Description:</strong> Assigned to support staff (admin, analysts, security, tech support). Restricted to necessary information.</p>
 
         <h2>Clearance Level 1 (C1 - General Personnel)</h2>
-        <p><strong>Description:</strong> Covers general personnel with access to basic information required for routine operations. These individuals do not handle sensitive data but perform essential tasks that keep ARI operational. General personnel are involved in day-to-day activities, maintenance, and general support roles.</p>
+        <p><strong>Description:</strong> Covers general personnel with access to basic information. Involved in routine operations, no sensitive data.</p>
 
         <h2>Clearance Level 0 (C0 - Non-essential Personnel)</h2>
-        <p><strong>Description:</strong> Limited access to critical information. Includes expendable personnel such as death row convicts, terminally ill individuals, and volunteers. This clearance level is regulated to minimize risks and ensure ethical standards are maintained. Ethical protocols are reviewed by an Ethical Review Board to safeguard the well-being and consent of these individuals.</p>
+        <p><strong>Description:</strong> Limited access to critical information. Includes non-essential personnel such as visitors and temporary staff. They are monitored and accompanied at all times to ensure security and safety.</p>
+
+        <h2>Clearance Level -1 (E-Class - Expendable Personnel)</h2>
+        <p><strong>Description:</strong> Includes individuals assigned to high-risk experiments and testing. Their participation is strictly regulated to minimize risks. Ethical protocols are reviewed by an Ethical Review Board to ensure well-being and consent.</p>
 
         <h2>Personnel Advancement and Training</h2>
         <p>Clearance levels can be adjusted based on performance, training, and qualifications. ARI provides a clear career progression path with regular reviews and targeted training to handle higher responsibilities. Personnel are encouraged to pursue additional qualifications and demonstrate competencies to achieve clearance upgrades, ensuring they are well-prepared for their roles.</p>
