--- a/Aberrations/ABR-001/ABR001.html
+++ b/Aberrations/ABR-001/ABR001.html
@@ -94,6 +94,12 @@
         .incident-report {
             margin-bottom: -1px;
         }
+        .report-link {
+            margin-top: 0px;
+            margin-bottom: 10px;
+            display: block;
+            color: #32A2EB;
+        }
     </style>
 </head>
 <body>
@@ -142,7 +148,7 @@
         <p class="closer-text">The Nephological Entity was discovered following unusual meteorological events in [REDACTED]. Initial containment involved managing an intense thunderstorm, believed to be a manifestation of the entity's distress. Over time, ARI's containment measures have significantly reduced its distress levels.</p>
         <p class="incident-report"><strong>Incident Report #001:</strong></p>
         <p class="closer-text">During an initial communication attempt, Doctor ████ and Researcher ████ were injured by an electrical discharge caused by the entity's distress. Both sustained burns and required medical treatment. This incident led to the integration of a Faraday cage within the containment cell and revised communication strategies to prevent future distress.</p>
-        <p><a href="https://hazudo.github.io/ARI/Aberrations/ABR-001/ABR-001_Incident-001.html" style="color: #32A2EB;">See full report</a></p>
+        <p><a href="https://hazudo.github.io/ARI/Aberrations/ABR-001/ABR-001_Incident-001.html" class="report-link">See full report</a></p>
         <p><strong>Containment Protocol Revision:</strong></p>
         <ul>
             <li class="closer-text"><strong>Faraday Cage:</strong> Added to prevent electrical discharges.</li>
