--- a/Aberrations/ABR006.html
+++ b/Aberrations/ABR006.html
@@ -23,44 +23,44 @@
             color: #f2f2f2;
             text-align: center;
             padding: 14px 20px;
-            text-decoration: none;
+            text-decoration: none.
         }
         .navbar a:hover {
             background-color: #464646;
-            color: black;
+            color: black.
         }
         .container {
-            padding: 20px;
-            margin: 20px auto;
-            max-width: 800px;
-            background-color: #4B4B4B;
-            border-radius: 8px;
-            box-shadow: 0 0 15px rgba(0,0,0,0.2);
+            padding: 20px.
+            margin: 20px auto.
+            max-width: 800px.
+            background-color: #4B4B4B.
+            border-radius: 8px.
+            box-shadow: 0 0 15px rgba(0,0,0,0.2).
         }
         h1 {
-            font-size: 22px;
-            border-bottom: 1px solid #666;
-            padding-bottom: 2px;
+            font-size: 22px.
+            border-bottom: 1px solid #666.
+            padding-bottom: 2px.
         }
         h2 {
-            font-size: 18px;
-            color: #D3D3D3;
-            margin-top: 40px;
-            margin-bottom: -10px;
-            border-bottom: 1px solid #666;
-            padding-bottom: 2px;
+            font-size: 18px.
+            color: #D3D3D3.
+            margin-top: 40px.
+            margin-bottom: -10px.
+            border-bottom: 1px solid #666.
+            padding-bottom: 2px.
         }
         p, ul {
-            font-size: 16px;
-            line-height: 1.6;
-            color: #D3D3D3;
+            font-size: 16px.
+            line-height: 1.6.
+            color: #D3D3D3.
         }
         ul {
-            list-style-type: none;
-            padding-left: 0;
+            list-style-type: none.
+            padding-left: 0.
         }
         li {
-            padding: 5px 0;
+            padding: 5px 0.
         }
     </style>
 </head>
@@ -80,23 +80,26 @@
         <p><strong>Containment Level:</strong> Gamma-2</p>
 
         <h2>Description</h2>
-        <p>ABR-006, known as "The Nexus Construct," is a metaphysical entity devoid of any discernible physical form. It manifests as an intricate, dynamic network of shifting sigils, symbols, and patterns suspended within an infinite void. This anomaly cannot be detected through conventional means, and its true nature remains largely beyond current comprehension.</p>
+        <p>ABR-006, known as "The Nexus Construct," is a metaphysical entity that appears as an intricate network of shifting symbols and patterns. These patterns are suspended within a seemingly infinite void. The entity cannot be detected through conventional means, and its true nature remains largely beyond current scientific understanding.</p>
 
         <h2>Containment Protocols</h2>
         <p>ABR-006 is contained within a specialized extradimensional chamber at ARI Site-███. Access to this chamber is restricted to personnel with Level 5 clearance and requires the use of a unique biometric key, reset every 24 hours. The containment chamber must be monitored continuously by advanced surveillance equipment and patrolled by a security team of no fewer than four agents equipped with anomaly detection devices.</p>
 
         <h2>Risk Assessment</h2>
-        <p>ABR-006 holds both the potential for revolutionary technological breakthroughs and considerable security risks. The data contained within the system could be invaluable, yet extreme precaution is advised during any interactions. The unpredictable nature of its updates and the encrypted files from the future present significant challenges for containment and risk management.</p>
+        <p>ABR-006 holds potential for significant technological advancements but also poses considerable security risks. The data contained within the system could be invaluable, yet extreme caution is advised during any interactions. The unpredictable nature of its updates and the encrypted files from unknown sources present significant challenges for containment and risk management.</p>
 
         <h2>Behavioral Analysis</h2>
-        <p>Predictive Updates: The system exhibits spontaneous updates, incorporating advanced technologies not yet developed or understood. Autonomous Operations: Operates without external power and shows no signs of wear, suggesting an advanced or unknown energy source. Data Storage: Contains encrypted files from the future, implying a capability to access or store future information.</p>
+        <p>Predictive Updates: The entity exhibits spontaneous updates, incorporating advanced technologies not yet developed or understood. Autonomous Operations: Operates without external power and shows no signs of wear, suggesting an advanced or unknown energy source. Data Storage: Contains encrypted files that suggest access to or storage of future information.</p>
 
         <h2>Appendices</h2>
         <h3>Experiment Log ABR-006-23</h3>
-        <p>Date: [DATA REDACTED] Procedure: A team of five researchers equipped with advanced cognitive enhancement technology was tasked with attempting to communicate with entities or consciousness connected to ABR-006's patterns. Results: The researchers reported a shared telepathic experience, feeling interconnected as part of a collective consciousness. They described communicating with enigmatic beings represented by the shifting symbols and sigils, exchanging thoughts and concepts beyond conventional human language. The exchange of information resulted in significant advancements in several scientific fields, including quantum mechanics, cosmology, and advanced mathematical principles. However, researchers also experienced profound existential questions and realizations about the limitations of human perception and the potential fragility of reality.</p>
+        <p>Date: [DATA REDACTED]</p>
+        <p>Procedure: A team of five E-Class personnel equipped with basic cognitive enhancement technology was tasked with attempting to communicate with entities or consciousness connected to ABR-006's patterns.</p>
+        <p>Results: The personnel reported a shared telepathic experience, feeling interconnected as part of a collective consciousness. They described communicating with enigmatic beings represented by the shifting symbols and sigils, exchanging thoughts and concepts beyond conventional human language. The exchange of information resulted in significant advancements in several scientific fields, including quantum mechanics, cosmology, and advanced mathematical principles. However, the personnel also experienced profound existential questions and realizations about the limitations of human perception and the potential fragility of reality.</p>
 
         <h3>Incident Log 006-B</h3>
-        <p>Date: [DATA REDACTED] Incident: During a routine observation session, ABR-006 exhibited an unexpected surge in energy output. This event coincided with a temporary malfunction of all electronic devices within a 500-meter radius of the containment chamber. The surge lasted for approximately 3 minutes before ABR-006 returned to its normal state. An investigation into the cause and potential implications of this event is ongoing.</p>
+        <p>Date: [DATA REDACTED]</p>
+        <p>Incident: During a routine observation session, ABR-006 exhibited an unexpected surge in energy output. This event coincided with a temporary malfunction of all electronic devices within a 60-meter radius of the containment chamber. The surge lasted for approximately 3 minutes before ABR-006 returned to its normal state. An investigation into the cause and potential implications of this event is ongoing.</p>
 
         <h1>END OF DOCUMENT</h1>
     </div>
