--- a/ABRlist.html
+++ b/ABRlist.html
@@ -79,51 +79,51 @@
             <li><a href="Aberrations/ABR-003/ABR003.html">ABR-003 - The Unseen Stalker</a></li>
             <li><a href="Aberrations/ABR-004/ABR004.html">ABR-004 - The Oracle Terminal</a></li>
             <li><a href="Aberrations/ABR-005/ABR005.html">ABR-005 - The Embrace of Eudaimonia</a></li>
-            <li><a href="Aberrations/ABR006.html">ABR-006 - The Nexus Construct</a></li>
-            <li><a href="Aberrations/ABR007.html">ABR-007 - Luminous Halo</a></li>
-            <li><a href="Aberrations/ABR008.html">ABR-008 - Bone Sculptor</a></li>
-            <li><a href="Aberrations/ABR009.html">ABR-009 - Bobble the Clown</a></li>
-            <li><a href="Aberrations/ABR010.html">ABR-010 - The Toothpick</a></li>
-            <li><a href="Aberrations/ABR011.html">ABR-011 - The Sentinel</a></li>
-            <li><a href="Aberrations/ABR012.html">ABR-012 - Guided Ignition Projectile</a></li>
-            <li><a href="Aberrations/ABR013.html">ABR-013 - Resonant Metronome</a></li>
-            <li><a href="Aberrations/ABR014.html">ABR-014 - Echoing Whisperer</a></li>
-            <li><a href="Aberrations/ABR015.html">ABR-015 - Reflective Abyss</a></li>
-            <li><a href="Aberrations/ABR016.html">ABR-016 - Parasitic Chamber</a></li>
-            <li><a href="Aberrations/ABR017.html">ABR-017 - Phantom Flu</a></li>
-            <li><a href="Aberrations/ABR018.html">ABR-018 - Reflective Aberration</a></li>
-            <li><a href="Aberrations/ABR019.html">ABR-019 - Deathly Snapshot</a></li>
-            <li><a href="Aberrations/ABR020.html">ABR-020 - Memory Leech</a></li>
-            <li><a href="Aberrations/ABR021.html">ABR-021 - </a></li>
-            <li><a href="Aberrations/ABR022.html">ABR-022 - </a></li>
-            <li><a href="Aberrations/ABR023.html">ABR-023 - </a></li>
-            <li><a href="Aberrations/ABR024.html">ABR-024 - </a></li>
-            <li><a href="Aberrations/ABR025.html">ABR-025 - </a></li>
-            <li><a href="Aberrations/ABR026.html">ABR-026 - </a></li>
-            <li><a href="Aberrations/ABR027.html">ABR-027 - </a></li>
-            <li><a href="Aberrations/ABR028.html">ABR-028 - </a></li>
-            <li><a href="Aberrations/ABR029.html">ABR-029 - </a></li>
-            <li><a href="Aberrations/ABR030.html">ABR-030 - </a></li>
-            <li><a href="Aberrations/ABR031.html">ABR-031 - </a></li>
-            <li><a href="Aberrations/ABR032.html">ABR-032 - </a></li>
-            <li><a href="Aberrations/ABR033.html">ABR-033 - </a></li>
-            <li><a href="Aberrations/ABR034.html">ABR-034 - </a></li>
-            <li><a href="Aberrations/ABR035.html">ABR-035 - </a></li>
-            <li><a href="Aberrations/ABR036.html">ABR-036 - </a></li>
-            <li><a href="Aberrations/ABR037.html">ABR-037 - </a></li>
-            <li><a href="Aberrations/ABR038.html">ABR-038 - </a></li>
-            <li><a href="Aberrations/ABR039.html">ABR-039 - </a></li>
-            <li><a href="Aberrations/ABR040.html">ABR-040 - </a></li>
-            <li><a href="Aberrations/ABR041.html">ABR-041 - </a></li>
-            <li><a href="Aberrations/ABR042.html">ABR-042 - </a></li>
-            <li><a href="Aberrations/ABR043.html">ABR-043 - </a></li>
-            <li><a href="Aberrations/ABR044.html">ABR-044 - </a></li>
-            <li><a href="Aberrations/ABR045.html">ABR-045 - </a></li>
-            <li><a href="Aberrations/ABR046.html">ABR-046 - </a></li>
-            <li><a href="Aberrations/ABR047.html">ABR-047 - </a></li>
-            <li><a href="Aberrations/ABR048.html">ABR-048 - </a></li>
-            <li><a href="Aberrations/ABR049.html">ABR-049 - </a></li>
-            <li><a href="Aberrations/ABR050.html">ABR-050 - </a></li>
+            <li><a href="Aberrations/ABR-006/ABR006.html">ABR-006 - The Nexus Construct</a></li>
+            <li><a href="Aberrations/ABR-007/ABR007.html">ABR-007 - Luminous Halo</a></li>
+            <li><a href="Aberrations/ABR-008/ABR008.html">ABR-008 - Bone Sculptor</a></li>
+            <li><a href="Aberrations/ABR-009/ABR009.html">ABR-009 - Bobble the Clown</a></li>
+            <li><a href="Aberrations/ABR-010/ABR010.html">ABR-010 - The Toothpick</a></li>
+            <li><a href="Aberrations/ABR-011/ABR011.html">ABR-011 - The Sentinel</a></li>
+            <li><a href="Aberrations/ABR-012/ABR012.html">ABR-012 - Guided Ignition Projectile</a></li>
+            <li><a href="Aberrations/ABR-013/ABR013.html">ABR-013 - Resonant Metronome</a></li>
+            <li><a href="Aberrations/ABR-014/ABR014.html">ABR-014 - Echoing Whisperer</a></li>
+            <li><a href="Aberrations/ABR-015/ABR015.html">ABR-015 - Reflective Abyss</a></li>
+            <li><a href="Aberrations/ABR-016/ABR016.html">ABR-016 - Parasitic Chamber</a></li>
+            <li><a href="Aberrations/ABR-017/ABR017.html">ABR-017 - Phantom Flu</a></li>
+            <li><a href="Aberrations/ABR-018/ABR018.html">ABR-018 - Reflective Aberration</a></li>
+            <li><a href="Aberrations/ABR-019/ABR019.html">ABR-019 - Deathly Snapshot</a></li>
+            <li><a href="Aberrations/ABR-020/ABR020.html">ABR-020 - Memory Leech</a></li>
+            <li><a href="Aberrations/ABR-021/ABR021.html">ABR-021 - </a></li>
+            <li><a href="Aberrations/ABR-022/ABR022.html">ABR-022 - </a></li>
+            <li><a href="Aberrations/ABR-023/ABR023.html">ABR-023 - </a></li>
+            <li><a href="Aberrations/ABR-024/ABR024.html">ABR-024 - </a></li>
+            <li><a href="Aberrations/ABR-025/ABR025.html">ABR-025 - </a></li>
+            <li><a href="Aberrations/ABR-026/ABR026.html">ABR-026 - </a></li>
+            <li><a href="Aberrations/ABR-027/ABR027.html">ABR-027 - </a></li>
+            <li><a href="Aberrations/ABR-028/ABR028.html">ABR-028 - </a></li>
+            <li><a href="Aberrations/ABR-029/ABR029.html">ABR-029 - </a></li>
+            <li><a href="Aberrations/ABR-030/ABR030.html">ABR-030 - </a></li>
+            <li><a href="Aberrations/ABR-031/ABR031.html">ABR-031 - </a></li>
+            <li><a href="Aberrations/ABR-032/ABR032.html">ABR-032 - </a></li>
+            <li><a href="Aberrations/ABR-033/ABR033.html">ABR-033 - </a></li>
+            <li><a href="Aberrations/ABR-034/ABR034.html">ABR-034 - </a></li>
+            <li><a href="Aberrations/ABR-035/ABR035.html">ABR-035 - </a></li>
+            <li><a href="Aberrations/ABR-036/ABR036.html">ABR-036 - </a></li>
+            <li><a href="Aberrations/ABR-037/ABR037.html">ABR-037 - </a></li>
+            <li><a href="Aberrations/ABR-038/ABR038.html">ABR-038 - </a></li>
+            <li><a href="Aberrations/ABR-039/ABR039.html">ABR-039 - </a></li>
+            <li><a href="Aberrations/ABR-040/ABR040.html">ABR-040 - </a></li>
+            <li><a href="Aberrations/ABR-041/ABR041.html">ABR-041 - </a></li>
+            <li><a href="Aberrations/ABR-042/ABR042.html">ABR-042 - </a></li>
+            <li><a href="Aberrations/ABR-043/ABR043.html">ABR-043 - </a></li>
+            <li><a href="Aberrations/ABR-044/ABR044.html">ABR-044 - </a></li>
+            <li><a href="Aberrations/ABR-045/ABR045.html">ABR-045 - </a></li>
+            <li><a href="Aberrations/ABR-046/ABR046.html">ABR-046 - </a></li>
+            <li><a href="Aberrations/ABR-047/ABR047.html">ABR-047 - </a></li>
+            <li><a href="Aberrations/ABR-048/ABR048.html">ABR-048 - </a></li>
+            <li><a href="Aberrations/ABR-049/ABR049.html">ABR-049 - </a></li>
+            <li><a href="Aberrations/ABR-050/ABR050.html">ABR-050 - </a></li>
         </ul>
     </div>
 </body>
