--- a/Aberrations/ABR-006/ABR006.html
+++ b/Aberrations/ABR-006/ABR006.html
@@ -107,12 +107,12 @@
         <div class="header-section">
             <div>
                 <p><strong>Aberration Designation:</strong> ABR-006</p>
-                <p><strong>Threat Level:</strong> Class III: Hazardous (HZ)</p>
+                <p><strong>Threat Level:</strong> Class III: Hazardous</p>
                 <p><strong>Containment Level:</strong> Gamma-2</p>
             </div>
             <div class="image-container">
-                <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-001/Image%20of%20ABR001.jpg" alt="Image of ABR-006">
-                <p>First image of ABR-006</p>
+                <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-006/Artists%20concept%20of%20ABR-006%20as%20capturing%20this%20ABR%20on%20image%20has%20not%20yet%20been%20achieved.jpg" alt="Image of ABR-006">
+                <p>Artist's concept of ABR-006. Capturing this ABR in an image has not yet been achieved.</p>
             </div>
         </div>
 
