--- a/Aberrations/ABR-006/ABR006.html
+++ b/Aberrations/ABR-006/ABR006.html
@@ -137,7 +137,7 @@
 
         <h3>Incident Log 006-B</h3>
         <p>Date: [DATA REDACTED]</p>
-        <p>Incident: During a routine surveillance operation, ABR-006 exhibited a sudden increase in energy output, causing temporary disruptions in electronic devices within a 500-meter radius. The surge lasted approximately three minutes, after which normal functionality resumed. No long-term damage was reported, but the incident highlighted the need for enhanced electronic shielding and further investigation into the triggers for such energy surges.</p>
+        <p>Incident: During a routine surveillance operation, ABR-006 exhibited a sudden increase in energy output, causing temporary disruptions in electronic devices within a radius of approximately 100 meters.. The surge lasted approximately three minutes, after which normal functionality resumed. No long-term damage was reported, but the incident highlighted the need for enhanced electronic shielding and further investigation into the triggers for such energy surges.</p>
 
         <h1>END OF DOCUMENT</h1>
     </div>
