--- a/clearanceranklist.html
+++ b/clearanceranklist.html
@@ -55,6 +55,10 @@
             line-height: 1.6;
             color: #D3D3D3;
         }
+        .main-article {
+            margin-left: 20px;
+            color: #32A2EB;
+        }
     </style>
 </head>
 <body>
@@ -94,7 +98,8 @@
         <p><strong>Description:</strong> Limited access to critical information. Includes non-essential personnel such as visitors and temporary staff. They are monitored and accompanied at all times to ensure security and safety.</p>
 
         <h2>Clearance Level -1 (E-Class - Expendable Personnel)</h2>
-        <p><strong>Description:</strong> Includes individuals assigned to high-risk experiments and testing. Their participation is strictly regulated to minimize risks. Ethical protocols are reviewed by an Ethical Review Board to ensure well-being and consent. For more information, see the <a href="e-class_personnel.html" style="color: #32A2EB;">E-Class Personnel Overview</a>.</p>
+        <p class="main-article">Main article: <a href="e-class_personnel.html" class="main-article">E-Class Personnel</a></p>
+        <p><strong>Description:</strong> Includes individuals assigned to high-risk experiments and testing. Their participation is strictly regulated to minimize risks. Ethical protocols are reviewed by an Ethical Review Board to ensure well-being and consent.</p>
 
         <h2>Personnel Advancement and Training</h2>
         <p>Clearance levels can be adjusted based on performance, training, and qualifications. ARI provides a clear career progression path with regular reviews and targeted training to handle higher responsibilities. Personnel are encouraged to pursue additional qualifications and demonstrate competencies to achieve clearance upgrades, ensuring they are well-prepared for their roles.</p>
