--- a/clearanceranklist.html
+++ b/clearanceranklist.html
@@ -57,6 +57,8 @@
         }
         .main-article {
             margin-left: 20px;
+        }
+        .main-article a {
             color: #32A2EB;
         }
     </style>
@@ -98,7 +100,7 @@
         <p><strong>Description:</strong> Limited access to critical information. Includes non-essential personnel such as visitors and temporary staff. They are monitored and accompanied at all times to ensure security and safety.</p>
 
         <h2>Clearance Level -1 (E-Class - Expendable Personnel)</h2>
-        <p class="main-article">Main article: <a href="hazudo.github.io/ARI/e-Class.html" class="main-article">E-Class Personnel</a></p>
+        <p class="main-article">Main article: <a href="e-class_personnel.html">E-Class Personnel</a></p>
         <p><strong>Description:</strong> Includes individuals assigned to high-risk experiments and testing. Their participation is strictly regulated to minimize risks. Ethical protocols are reviewed by an Ethical Review Board to ensure well-being and consent.</p>
 
         <h2>Personnel Advancement and Training</h2>
