--- a/clearanceranklist.html
+++ b/clearanceranklist.html
@@ -100,7 +100,7 @@
         <p><strong>Description:</strong> Limited access to critical information. Includes non-essential personnel such as visitors and temporary staff. They are monitored and accompanied at all times to ensure security and safety.</p>
 
         <h2>Clearance Level -1 (E-Class - Expendable Personnel)</h2>
-        <p class="main-article">Main article: <a href="e-class_personnel.html">E-Class Personnel</a></p>
+        <p class="main-article">Main article: <a href="hazudo.github.io/ARI/E-Class.html">E-Class Personnel</a></p>
         <p><strong>Description:</strong> Includes individuals assigned to high-risk experiments and testing. Their participation is strictly regulated to minimize risks. Ethical protocols are reviewed by an Ethical Review Board to ensure well-being and consent.</p>
 
         <h2>Personnel Advancement and Training</h2>
