--- a/Aberrations/ABR-007/ABR007.html
+++ b/Aberrations/ABR-007/ABR007.html
@@ -111,8 +111,8 @@
                 <p><strong>Containment Level:</strong> Zeta-1</p>
             </div>
             <div class="image-container">
-                <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-001/Image%20of%20ABR001.jpg" alt="Image of ABR-007">
-                <p>First image of ABR-007</p>
+                <img src="https://raw.githubusercontent.com/Hazudo/ARI/main/Aberrations/ABR-007/Image%20of%20ABR-007%20captured%20over%20a%20lake.jpg" alt="Image of ABR-007">
+                <p>Image of ABR-007 captured over a lake.</p>
             </div>
         </div>
 
